working on front

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                   <label for="fn">File name for result</label>
                   <p><input type="text" class="form-control" id="fn" value="res.txt"></p>
               </div>
-              <p class="checkbox"><input type="checkbox" value="true">UPDATE</p>
+              <p class="checkbox"><input type="checkbox" value="true" id="update">UPDATE</p>
               <div class="type">
                   <button class="btn btn-primary" type="submit" id="subm">Scan games</button>
               </div>
