--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
           <div class="type"><button id="auth" class="btn btn-primary">SIGN IN VIA BROWSER</button></div>
           <div class="type">
               <div class="bet-calc">
+                  <p class="checkbox"><input type="checkbox" value="true" id="active" checked>ACTIVE</p>
                   <div class="colors">
                       <p>ADD A BET FORMULA <button id="addFormula" class="btn btn-sm btn-outline-primary">+</button> 
                   </div>
