--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
           <form action="send(event)" name="ipcForm" class="form" onSubmit="send(event)">
               <div class="type">
                   <label for="num">Number of games</label>
-                  <p><input type="text" class="custom form-control" id="num" value="100"></p>
+                  <p><input type="text" class="custom form-control" id="num" value="30"></p>
               </div>
               <div class="type">
                   <label for="ms">Delay for request (in ms)</label>
@@ -45,7 +45,7 @@
           <div class="type"><button id="auth" class="btn btn-primary">SIGN IN VIA BROWSER</button></div>
           <div class="type">
               <div class="bet-calc">
-                  <p class="checkbox"><input type="checkbox" value="true" id="active" checked>ACTIVE</p>
+                  <p class="checkbox"><input type="checkbox" value="true" id="active">ACTIVE</p>
                   <div class="colors">
                       <p>ADD A BET FORMULA <button id="addFormula" class="btn btn-sm btn-outline-primary">+</button> 
                   </div>
